# copier-python-template

./: .cspell.json  .gitignore  .mega-linter.yml  .mise.toml  .pre-commit-config.yaml  .yamllint.yml  README.md  copier.yml  devbox.json  project-words.txt  pyproject.toml  techstack.md  techstack.yml  tox.ini
.deadpendency/: config.yaml
.github/: deadpendency.yaml  dependabot.yml  mergify.yml
.github/workflows/: cronjobs.yml  mega-linter.yml  pull-requests-and-pushes.yml  super-linter.yml
TGT/: Makefile  todo.txt  tox.ini
TGT/.github/: labels.yml
TGT/.github/workflows/: labels.yml  publish.yml  test2.yml
copier-python-template/: .gitpod.yml  .mise.toml  .pre-commit-config.yaml  .sourcery.yaml  .yamllint.yml  AUTHORS.tmpl  CHANGELOG.md  MANIFEST.in  README.md.jinja  bumpversion.cfg.tmpl  devbox.json  mlc_config.json.jinja  pyproject.toml.jinja  {% if docker %}Dockerfile{% endif %}
copier-python-template/.deadpendency/: config.yaml
copier-python-template/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md.jinja  deadpendency.yaml  dependabot.yml  labeler.yml  mergify.yml
copier-python-template/.github/workflows/: ansible-lint.yml  codeql.yml  cronjobs.yml  images.yml  pull-requests-and-pushes.yml  shiftleft.yml  stale.yml
copier-python-template/tests/: copier_python_template_test.py
copier-python-template/{{ package_name_py }}/: __init__.py.jinja
copier-python-template/{{ package_name_py }}/data/: make_dataset.py
copier-python-template/{{doc_dir}}/: CONTRIBUTING.md  STYLE_GUIDE.md
