[project]
name = "copier-python-template"
version = "0.0.1"
description = "Copier template for my python projects."
license = { text = "Unlicense" }
authors = [{ name = "Francis T. O'Donovan", email = "proinsias@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "copier>=5.1.0",
    "pyright>=1.1.275",
    "pytest>=7.2.0",
    "yamllint>=1.26.3"
]

[project.urls]
Homepage = "https://github.com/proinsias/copier-python-template"
Repository = "https://github.com/proinsias/copier-python-template"
Documentation = "https://github.com/proinsias/copier-python-template"
"Bug Tracker" = "https://github.com/proinsias/copier-python-template/issues"

[tool.ruff]
# Find and format code blocks in Markdown files
extend-include = ["*.md"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["ALL", "I"]
# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
# Optionally, list rules that should never be fixed automatically
unfixable = []
